<resources>
    <string name="app_name" translatable="false">Local Trader</string>
    <string name="desc" translatable="false">""</string>
    <string name="btc" translatable="false">BTC</string>
    <string name="btc_symbol" translatable="false">฿</string>
    <string name="usd" translatable="false">USD</string>
    <string name="eth" translatable="false">ETH</string>
    <string name="error_title">Error</string>
    <string name="warning_no_location_active">Location services are required to use the search function, please enable location services to continue.</string>
    <string name="warning_no_google_play_services">Google Play Services are required, please install or update the services.</string>
    <string name="warning_update_google_play_services">Google Play Services are out of date, please update the services.</string>
    <string name="warning_no_location_services_title">Location Services</string>
    <string name="warning_no_google_play_services_title">Google Play Services</string>
    <string name="error_no_internet">Weak or no internet connection</string>
    <string name="error_generic_error">Service unreachable, check network connection.</string>
    <string name="error_unknown_error">An unknown error has occurred.</string>
    <string name="error_service_unreachable_error">The service is unreachable or not responding.</string>
    <string name="error_service_timeout_error">The service has timed out and is unresponsive.</string>
    <string name="error_service_error">Service produced resource not found error.</string>
    <string name="error_authentication">Authentication error, please check that your login credentials are correct.</string>
    <string name="error_bad_token">Expired token, please login again.</string>
    <string name="view_title_advertisements">Advertisements</string>
    <string name="view_title_search">Search</string>
    <string name="view_title_trades">Trades</string>
    <string name="view_title_notifications">Notifications</string>
    <string name="view_title_dashboard">Dashboard</string>
    <string name="view_title_wallet">Wallet</string>
    <string name="view_title_buy_sell">Search</string>
    <string name="view_title_request">Receive</string>
    <string name="view_title_send">Send</string>
    <string name="view_title_about">About</string>
    <string name="view_title_settings">Settings</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_close">Close</string>
    <string name="button_dispute">Dispute</string>
    <string name="button_release">Release</string>
    <string name="button_fund">Fund</string>
    <string name="button_confirm">CONFIRM</string>
    <string name="button_mark_paid">Mark Paid</string>
    <string name="button_delete">Delete</string>
    <string name="menu_action_paste">Paste</string>
    <string name="menu_action_filter">Filter</string>
    <string name="menu_action_map">View map</string>
    <string name="menu_action_visibility">Visibility</string>
    <string name="menu_action_scan">Scan</string>
    <string name="menu_action_send">Send</string>
    <string name="menu_action_send_message">Message</string>
    <string name="menu_action_copy">COPY</string>
    <string name="menu_action_delete">Delete</string>
    <string name="menu_action_edit">Edit</string>
    <string name="menu_action_web">View online</string>
    <string name="menu_action_share">Share</string>
    <string name="menu_action_search">Search</string>
    <string name="menu_action_advertisement">Advertisement</string>
    <string name="menu_action_advertise">Post Trade</string>
    <string name="menu_action_trades">Trade History</string>
    <string name="menu_action_notifications">Mark Notifications Read</string>
    <string name="menu_action_profile">Profile</string>
    <string name="menu_action_cancel">Cancel</string>
    <string name="menu_action_dispute">Dispute</string>
    <string name="menu_action_blockchain">View Blockchain</string>
    <string name="menu_action_address">New Address</string>
    <string-array name="login_registration_screens_description">
        <item><![CDATA[Local Trader works with your <b>LocalBitcoins account</b> to manage trades, advertisements, send messages, or to handle payments.]]></item>
        <item><![CDATA[Local Trader uses <b>Oauth2 authentication</b> through the LocalBitcoins website, your credentials are never stored in the application.]]></item>
        <item><![CDATA[A <b>PIN code</b> (not 2FA) is required to send Bitcoin, fund or release trades. Manage PIN code from your <a href=\'https://localbitcoins.com/accounts/profile/#toc6?ch=2hbo\'>LocalBitcoins Profile</a> page]]></item>
    </string-array>
    <string name="login_authorizing">Authenticating…</string>
    <string name="contact_fund_confirm">Are you sure you want to fund this trade?</string>
    <string name="contact_dispute_confirm">Are you sure you want to dispute this trade?</string>
    <string name="contact_paid_confirm">Are you sure you want to mark this trade as paid?</string>
    <string name="contact_cancel_confirm">Do you want to cancel this trade?</string>
    <string name="contact_list_selling_online"><![CDATA[Selling online for <b>%1$s</b> using <b>%2$s</b> initiated on %3$s]]></string>
    <string name="contact_list_selling_locally"><![CDATA[Selling locally for <b>%1$s</b> initiated on %2$s]]></string>
    <string name="contact_list_buying_online"><![CDATA[Buying online for <b>%1$s</b> using <b>%2$s</b> initiated on %3$s]]></string>
    <string name="contact_list_buying_locally"><![CDATA[Buying locally for <b>%1$s</b> initiated on %2$s]]></string>
    <string name="trade_request_title">Enter %1$s or BTC amount</string>
    <string name="order_description_not_funded_local">This trade has not yet been funded. The seller should fund the trade.</string>
    <string name="order_description_funded_local">This trade has been funded. Now you can meet to make the exchange.</string>
    <string name="order_description_paid">This trade has been marked as paid and is awaiting the release of funds.</string>
    <string name="order_description_online_paid">This trade has been funded and marked as paid. When you spot the online payment you can release the funds.</string>
    <string name="order_description_mark_paid">This trade has been initiated but not yet marked paid, you should mark it as paid.</string>
    <string name="order_description_online_mark_paid">This trade has been funded automatically from your account but not yet marked paid by the buyer.</string>
    <string name="order_description_disputed">This trade has been disputed but can still be released.</string>
    <string name="order_description_released">This trade has been released and is complete.</string>
    <string name="order_description_cancel">This trade has either timed out or been canceled.</string>
    <string name="order_description_closed">This trade has been closed and is no longer active.</string>
    <string name="order_description_cancel_local">This trade has been canceled.</string>
    <string name="trade_released_toast_text">Trade released!</string>
    <string name="trade_canceled_toast_text">Trade canceled!</string>
    <string name="message_clipboard_title">Message</string>
    <string name="message_copied_toast">Message copied to clipboard!</string>
    <string name="message_copied_attachment_toast">Message copied to clipboard and downloading attachment!</string>
    <string name="list_trade_filter2">Released Trades</string>
    <string name="list_trade_filter3">Canceled Trades</string>
    <string name="list_trade_filter4">Closed Trades</string>
    <string name="advertisement_invisible_warning">This advertisement is not currently running, update the visibility from the menu.</string>
    <string name="price_equation_edit_description">Price equation is derived by combining the bitcoin market price, currency, and margin value. For more complex pricing edit price equation directly. See localbitcoins.com/guides/equation-howto/</string>
    <string name="ad_status_edit_description">Check to make advertisement active, uncheck to make inactive.</string>
    <string name="advertisement_track_liquidity">Track liquidity</string>
    <string name="advertisement_sms_verified">Only contacts with a verified mobile phone number can contact you.</string>
    <string name="advertisement_trusted_only">Restrict your advertisement to be shown only to users that you have marked as Trusted. Learn how to mark users as trusted here localbitcoins.com/faq#trusted_users</string>
    <string name="advertisement_payment_details">Optional. If necessary, please provide details how to transfer money. This is either bank account number for wire transfers or user account for money transfer websites.</string>
    <string name="advertisement_bank">Bank/payment provider name/code. For international wire transfers, please specify bank SWIFT / BIC code</string>
    <string name="advertisement_payment_method">Each payment method has an associated risk level. See risk assessments online at localbitcoins.com/guides/how-to-sell-bitcoins-online#risk-level.</string>
    <string name="advertisement_notes_text_online"><![CDATA[%1$s for <b>%2$s</b> using <b>%3$s</b> in <b>%4$s</b>]]></string>
    <string name="advertisement_notes_text_locally"><![CDATA[%1$s for <b>%2$s</b> near <b>%3$s</b>]]></string>
    <string name="advertisement_notes_text_online_location"><![CDATA[%1$s for <b>%2$s</b> in <b>%3$s</b>]]></string>
    <string name="advertisement_edit_margin_description">A margin is used in price equation to add or subtract additional value from market price. Use a negative margin to set below market.</string>
    <string name="advertisement_delete_confirm">Do you want to permanently delete this advertisement?</string>
    <string-array name="list_advertisement_type_spinner">
        <item>@string/ad_sell_locally</item>
        <item>@string/ad_buy_locally</item>
        <item>@string/ad_sell_online</item>
        <item>@string/ad_buy_online</item>
    </string-array>
    <string name="ad_sell_locally">Sell bitcoins locally</string>
    <string name="ad_buy_locally">Buy bitcoins locally</string>
    <string name="ad_sell_online"> Sell bitcoins online</string>
    <string name="ad_buy_online">Buy bitcoins online</string>
    <string name="transaction_sent_description"><![CDATA[You sent bitcoin to external address <a href="%1$s">%2$s</a>]]></string>
    <string name="text_liquidity_description">Decreases max request amount as trades are filled to match remaining balance. This option limits the liquidity of this advertisement to the maximum amount.</string>
    <string name="text_track_liquidity">Track liquidity</string>
    <string name="text_identified_people_only">Identified people only</string>
    <string name="text_identified_people_only_description">To contact your advertisement, users need to verify their identity by sending IDs, driver\'s licence or passport.</string>
    <string name="text_sms_verification_required">SMS verification required</string>
    <string name="text_trusted_people_only">Trusted people only</string>
    <string name="text_identify_user_before_continuing_trade">Identify user before continuing trade</string>
    <string name="text_identify_user_before_continuing_trade_description">Other users can make a contact to your ad, but they need to identify to you before the trade can continue. Payment details are hidden and the buyer cannot send the payment until identification is approved by you.</string>
    <string name="text_real_name_required">Real name required</string>
    <string name="text_real_name_required_description">The buyer must have a real name set. You confirm the real name when the buyer replies to the advertisement. For more information see localbitcoins.com/guides/real-name</string>
</resources>