<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020 ThanksMister LLC
  ~ www.ThanksMister.com
  ~ mister@thanksmister.com
  ~ Mozilla Public License Version 2.0
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navigationItemDashboard"
            android:checkable="false"
            android:icon="@drawable/dashboard_small"
            android:title="@string/view_title_dashboard" />

        <item
            android:id="@+id/navigationItemSearch"
            android:checkable="false"
            android:icon="@drawable/search_small"
            android:title="@string/view_title_search" />

        <item
            android:id="@+id/navigationItemSend"
            android:checkable="false"
            android:icon="@drawable/send_small"
            android:title="@string/view_title_send" />

        <item
            android:id="@+id/navigationItemReceive"
            android:icon="@drawable/receive_small"
            android:checkable="false"
            android:title="@string/view_title_request" />

        <item
            android:id="@+id/navigationItemWallet"
            android:icon="@drawable/wallet_small"
            android:checkable="false"
            android:title="@string/view_title_wallet" />

        <item
            android:id="@+id/navigationItemAbout"
            android:icon="@drawable/info_small"
            android:checkable="false"
            android:title="@string/view_title_about" />

        <item
            android:id="@+id/navigationItemSettings"
            android:icon="@drawable/settings_small"
            android:checkable="false"
            android:title="@string/view_title_settings" />
    </group>

</menu>