<!--
  ~ Copyright (c) 2020 ThanksMister LLC
  ~  http://www.thanksmister.com
  ~
  ~  Mozilla Public License 2.0
  ~
  ~  Permissions of this weak copyleft license are conditioned on making
  ~  available source code of licensed files and modifications of those files
  ~  under the same license (or in certain cases, one of the GNU licenses).
  ~  Copyright and license notices must be preserved. Contributors provide
  ~  an express grant of patent rights. However, a larger work using the
  ~  licensed work may be distributed under different terms and without source
  ~  code for files added in the larger work.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:thanksmister="http://schemas.android.com/apk/res-auto"
      tools:context=".MainActivity">
    
    <item android:id="@+id/action_visible"
          android:title="@string/menu_action_visibility"
          android:icon="@drawable/ic_action_visibility"
          thanksmister:showAsAction="always"/>

    <item android:id="@+id/action_edit"
          android:title="@string/menu_action_edit"
          android:icon="@drawable/ic_action_content_create"
          thanksmister:showAsAction="always"/>

    <item android:id="@+id/action_share"
          android:title="@string/menu_action_share"
          android:icon="@drawable/ic_action_social_share"
          thanksmister:showAsAction="ifRoom"/>

    <item android:id="@+id/action_location"
          android:title="@string/menu_action_map"
          android:icon="@drawable/ic_action_map"
          thanksmister:showAsAction="ifRoom"/>

    <item android:id="@+id/action_website"
          android:title="@string/menu_action_web"
          android:icon="@drawable/ic_action_location_web_site"
          thanksmister:showAsAction="ifRoom"/>

    <item android:id="@+id/action_delete"
          android:title="@string/menu_action_delete"
          android:icon="@drawable/ic_action_delete"
          thanksmister:showAsAction="ifRoom"/>

</menu>
