<!--
  ~ Copyright (c) 2020 ThanksMister LLC
  ~  http://www.thanksmister.com
  ~
  ~  Mozilla Public License 2.0
  ~
  ~  Permissions of this weak copyleft license are conditioned on making
  ~  available source code of licensed files and modifications of those files
  ~  under the same license (or in certain cases, one of the GNU licenses).
  ~  Copyright and license notices must be preserved. Contributors provide
  ~  an express grant of patent rights. However, a larger work using the
  ~  licensed work may be distributed under different terms and without source
  ~  code for files added in the larger work.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:thanksmister="http://schemas.android.com/apk/res-auto"
      tools:context=".MainActivity">

    <item android:id="@+id/action_send"
          android:title="@string/menu_action_send_message"
          android:icon="@drawable/ic_action_new_message"
          thanksmister:showAsAction="withText|always"/>

    <item android:id="@+id/action_profile"
          android:title="@string/menu_action_profile"
          android:icon="@drawable/ic_action_social_person"
          thanksmister:showAsAction="ifRoom"/>

    <item android:id="@+id/action_advertisement"
          android:title="@string/menu_action_advertisement"
          android:icon="@drawable/ic_action_news"
          thanksmister:showAsAction="ifRoom"/>

    <item android:id="@+id/action_cancel"
          android:title="@string/menu_action_cancel"
          android:icon="@drawable/ic_action_navigation_cancel"
          thanksmister:showAsAction="never"
          android:visible="false"/>

    <item android:id="@+id/action_dispute"
          android:title="@string/menu_action_dispute"
          android:icon="@drawable/ic_action_gavel"
          thanksmister:showAsAction="never"
          android:visible="false"/>

</menu>
