<!--
  ~ Copyright (c) 2020 ThanksMister LLC
  ~  http://www.thanksmister.com
  ~
  ~  Mozilla Public License 2.0
  ~
  ~  Permissions of this weak copyleft license are conditioned on making
  ~  available source code of licensed files and modifications of those files
  ~  under the same license (or in certain cases, one of the GNU licenses).
  ~  Copyright and license notices must be preserved. Contributors provide
  ~  an express grant of patent rights. However, a larger work using the
  ~  licensed work may be distributed under different terms and without source
  ~  code for files added in the larger work.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:thanksmister="http://schemas.android.com/apk/res-auto"
      tools:context=".ContactsActivity">

    <item
            android:title="@string/menu_action_filter"
          android:icon="@drawable/ic_action_content_filter_list"
          thanksmister:showAsAction="ifRoom">
        
        <menu>

            <item android:id="@+id/action_released"
                  android:title="@string/list_trade_filter2"/>

            <item android:id="@+id/action_canceled"
                  android:title="@string/list_trade_filter3"/>

            <item android:id="@+id/action_closed"
                  android:title="@string/list_trade_filter4"/>
        </menu>
        
    </item>
   
</menu>
