<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:thanksmister="http://schemas.android.com/apk/res-auto"
      tools:context=".MainActivity">

    <item android:id="@+id/action_dispute"
          android:title="@string/menu_action_map"
          android:icon="@drawable/ic_maps_place"
          thanksmister:showAsAction="ifRoom"/>

    <item android:id="@+id/action_advertisement"
          android:title="@string/menu_action_advertisement"
          android:icon="@drawable/ic_action_location_web_site"
          thanksmister:showAsAction="ifRoom"/>
    
    <item android:id="@+id/action_profile"
          android:title="@string/menu_action_profile"
          android:icon="@drawable/ic_action_social_person"
          thanksmister:showAsAction="ifRoom"/>
</menu>
