<!--
  ~ Copyright (c) 2020 ThanksMister LLC
  ~ www.ThanksMister.com
  ~ mister@thanksmister.com
  ~ Mozilla Public License Version 2.0
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:thanksmister="http://schemas.android.com/apk/res-auto"
      tools:context=".MainActivity">

    <item android:id="@+id/action_send"
          android:title="@string/menu_action_send_message"
          android:icon="@drawable/ic_action_new_message"
          thanksmister:showAsAction="withText|always"/>

    <item android:id="@+id/action_profile"
          android:title="@string/menu_action_profile"
          android:icon="@drawable/ic_action_social_person"
          thanksmister:showAsAction="ifRoom"/>

    <item android:id="@+id/action_advertisement"
          android:title="@string/menu_action_advertisement"
          android:icon="@drawable/ic_action_news"
          thanksmister:showAsAction="ifRoom"/>

</menu>
