<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020 ThanksMister LLC
  ~  http://www.thanksmister.com
  ~
  ~  Mozilla Public License 2.0
  ~
  ~  Permissions of this weak copyleft license are conditioned on making
  ~  available source code of licensed files and modifications of those files
  ~  under the same license (or in certain cases, one of the GNU licenses).
  ~  Copyright and license notices must be preserved. Contributors provide
  ~  an express grant of patent rights. However, a larger work using the
  ~  licensed work may be distributed under different terms and without source
  ~  code for files added in the larger work.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_advertisements_black_24dp"
            android:title="@string/view_title_advertisements"/>

    <item
            android:id="@+id/navigation_dashboard"
            android:icon="@drawable/ic_trades_black_24dp"
            android:title="@string/view_title_trades"/>

    <item
            android:id="@+id/navigation_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/view_title_notifications"/>

</menu>
