<!--
  ~ Copyright (c) 2017 ThanksMister LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License. 
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed 
  ~ under the License is distributed on an "AS IS" BASIS, 
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
  ~ See the License for the specific language governing permissions and 
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="16dp">

    <!-- Liquidity -->

    <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="16dp"/>

    <CheckBox
            style="@style/TextMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/liquidityCheckBox"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/activity_padding"
            android:layout_marginRight="@dimen/activity_padding"
            android:theme="@style/EditTextTheme"
            android:text="@string/text_track_liquidity"/>

    <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="8dp"/>

    <TextView
            style="@style/TextSmall"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="@dimen/activity_padding"
            android:paddingRight="@dimen/activity_padding"
            android:text="@string/text_liquidity_description"/>

    <View
            android:background="?android:attr/dividerHorizontal"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

    <!-- Identified People Only -->

    <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="16dp"/>

    <CheckBox
            style="@style/TextMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_padding"
            android:layout_marginRight="@dimen/activity_padding"
            android:id="@+id/identifiedCheckBox"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:theme="@style/EditTextTheme"
            android:text="@string/text_identified_people_only"/>

    <TextView
            style="@style/TextSmall"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="@dimen/activity_padding"
            android:paddingRight="@dimen/activity_padding"
            android:text="@string/text_identified_people_only_description"/>

    <View
            android:background="?android:attr/dividerHorizontal"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>


    <!-- Identified People Before Trade -->

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"
            android:orientation="vertical">

        <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="16dp"/>

        <CheckBox
                style="@style/TextMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_padding"
                android:layout_marginRight="@dimen/activity_padding"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:theme="@style/EditTextTheme"
                android:text="@string/text_identify_user_before_continuing_trade"/>

        <TextView
                style="@style/TextSmall"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/activity_padding"
                android:paddingRight="@dimen/activity_padding"
                android:text="@string/text_identify_user_before_continuing_trade_description"/>

        <View
                android:background="?android:attr/dividerHorizontal"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

    </LinearLayout>

    <!-- Real Name Required -->

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

        <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="16dp"/>

        <CheckBox
                style="@style/TextMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_padding"
                android:layout_marginRight="@dimen/activity_padding"
                android:theme="@style/EditTextTheme"
                android:text="@string/text_real_name_required"/>

        <TextView
                style="@style/TextSmall"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/activity_padding"
                android:paddingRight="@dimen/activity_padding"
                android:linksClickable="true"
                android:autoLink="web"
                android:textColorLink="@color/body_text_blue_1"
                android:text="@string/text_real_name_required_description"/>

        <View
                android:background="?android:attr/dividerHorizontal"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

    </LinearLayout>


    <!-- SMS verified -->

    <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="16dp"/>

    <CheckBox
            style="@style/TextMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/smsVerifiedCheckBox"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/activity_padding"
            android:layout_marginRight="@dimen/activity_padding"
            android:theme="@style/EditTextTheme"
            android:text="@string/text_sms_verification_required"/>

    <TextView
            style="@style/TextSmall"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="@dimen/activity_padding"
            android:paddingRight="@dimen/activity_padding"
            android:text="@string/advertisement_sms_verified"/>

    <View
            android:background="?android:attr/dividerHorizontal"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

    <!-- Trusted People Only -->

    <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="16dp"/>

    <CheckBox
            style="@style/TextMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/trustedCheckBox"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/activity_padding"
            android:layout_marginRight="@dimen/activity_padding"
            android:theme="@style/EditTextTheme"
            android:text="@string/text_trusted_people_only"/>

    <TextView
            style="@style/TextSmall"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="@dimen/activity_padding"
            android:paddingRight="@dimen/activity_padding"
            android:linksClickable="true"
            android:autoLink="web"
            android:textColorLink="@color/body_text_blue_1"
            android:text="@string/advertisement_trusted_only"/>

    <View
            android:background="?android:attr/dividerHorizontal"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

</LinearLayout>