<!--
  ~ Copyright (c) 2020 ThanksMister LLC
  ~  http://www.thanksmister.com
  ~
  ~  Mozilla Public License 2.0
  ~
  ~  Permissions of this weak copyleft license are conditioned on making
  ~  available source code of licensed files and modifications of those files
  ~  under the same license (or in certain cases, one of the GNU licenses).
  ~  Copyright and license notices must be preserved. Contributors provide
  ~  an express grant of patent rights. However, a larger work using the
  ~  licensed work may be distributed under different terms and without source
  ~  code for files added in the larger work.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:thanksmister="http://schemas.android.com/apk/res-auto"
      tools:context=".MainActivity">

    <item android:id="@+id/action_paste"
          android:title="@string/menu_action_paste"
          android:icon="@drawable/ic_action_content_paste"
          thanksmister:showAsAction="ifRoom"/>
    
    <item android:id="@+id/action_share"
          android:title="@string/menu_action_share"
          android:icon="@drawable/ic_action_social_share"
          thanksmister:showAsAction="ifRoom"/>

    <item android:id="@+id/action_blockchain"
          android:title="@string/menu_action_blockchain"
          android:icon="@drawable/ic_qrcode"
          thanksmister:showAsAction="never"/>

    <item android:id="@+id/action_new_address"
        android:title="@string/menu_new_address"
        android:visible="false"
        android:icon="@drawable/ic_qrcode"
        thanksmister:showAsAction="never"/>

</menu>
